--- a/MVVMApps/MVVMApps/MVVMApps.csproj
+++ b/MVVMApps/MVVMApps/MVVMApps.csproj
@@ -27,6 +27,9 @@
     <EmbeddedResource Update="Views\CoffeePageSQLite.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\DetailCoffeePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\DetailCoffeePageSQLite.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
