--- a/MVVMApps/MVVMApps.iOS/MVVMApps.iOS.csproj
+++ b/MVVMApps/MVVMApps.iOS/MVVMApps.iOS.csproj
@@ -135,6 +135,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.FirebasePushNotification">
+      <Version>3.3.10</Version>
+    </PackageReference>
     <PackageReference Include="Refractored.MvvmHelpers">
       <Version>1.6.2</Version>
     </PackageReference>
